syntax = "proto3";

message StackableItem {
	string catalogId = 1;
	string instanceId = 2;
	uint32 amount = 3;
}